--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -136,6 +136,8 @@
 
     </ScrollView>
 
+    <include layout="@layout/layout_miscellaneous"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
