--- a/app/src/main/res/drawable/background_add_button.xml
+++ b/app/src/main/res/drawable/background_add_button.xml
@@ -2,4 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="@color/colorAccent"/>
+    <stroke android:color="@color/colorQuickActionsBackground"
+        android:width="@dimen/_4sdp"/>
 </shape>
