--- a/app/src/main/res/layout/layout_miscellaneous.xml
+++ b/app/src/main/res/layout/layout_miscellaneous.xml
@@ -175,9 +175,7 @@
         android:id="@+id/layoutAddUrl"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_35sdp"
-        android:layout_marginLeft="@dimen/_10sdp"
-        android:layout_marginRight="@dimen/_10sdp"
-        android:layout_marginBottom="@dimen/_10sdp"
+        android:layout_margin="@dimen/_10sdp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         tools:ignore="UseCompoundDrawables">
@@ -200,7 +198,35 @@
             android:textSize="@dimen/_12ssp"/>
 
     </LinearLayout>
-    
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/layoutAddToDoList"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="@dimen/_35sdp"-->
+<!--        android:layout_margin="@dimen/_10sdp"-->
+<!--        android:gravity="center_vertical"-->
+<!--        android:orientation="horizontal"-->
+<!--        tools:ignore="UseCompoundDrawables">-->
+
+<!--        <ImageView-->
+<!--            android:layout_width="@dimen/_22sdp"-->
+<!--            android:layout_height="@dimen/_22sdp"-->
+<!--            android:contentDescription="@string/app_name"-->
+<!--            android:src="@drawable/ic_check_box"-->
+<!--            app:tint="@color/colorIcons"/>-->
+
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="@dimen/_10sdp"-->
+<!--            android:fontFamily="@font/ubuntu_medium"-->
+<!--            android:includeFontPadding="false"-->
+<!--            android:text="@string/add_todo_list"-->
+<!--            android:textColor="@color/colorIcons"-->
+<!--            android:textSize="@dimen/_12sdp"/>-->
+
+
+<!--    </LinearLayout>-->
     <LinearLayout
         android:id="@+id/layoutDeleteNote"
         android:layout_width="match_parent"
