--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -138,6 +138,21 @@
                 app:layout_constraintTop_toTopOf="@id/imageNote"
                 app:tint="@color/white" />
 
+            <ImageView
+                android:id="@+id/imageRotateImage"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:background="@drawable/background_delete"
+                android:contentDescription="@string/app_name"
+                android:padding="@dimen/_4sdp"
+                android:src="@drawable/ic_rotate_left"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="@id/imageNote"
+                app:layout_constraintTop_toTopOf="@id/imageNote"
+                app:tint="@color/white" />
+
 
             <LinearLayout
                 android:id="@+id/layoutWebUrl"
